tests/_resources/error_gcns/E012_missing_equals.expected
error[E012]: Missing '=' in equation
  --> E012_missing_equals.gcn:6:9
     |
   4 |     identities
   5 |     {
   6 |         Y[] + C[] + I[];
     |         ^ missing equals sign
   7 |     };
   8 | };
     |
   = note: Add '=' between LHS and RHS: Y[] = C[] + I[]
   = note: Check if the equation was accidentally corrupted
