tests/_resources/error_gcns/E012_missing_equals.gcn
# Error: No equals sign in equation
block UTILITY
{
    identities
    {
        Y[] + C[] + I[];
    };
};
